# visutech_test_task

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  makefile
include/application/: Application.h
include/parser/: CommandLineParser.h
include/replace/: ReplaceStrategy.h
include/sort/: SortStrategy.h
src/: main.cpp
src/application/: DefaultApplication.cpp  DefaultApplication.h  TreadedApplication.cpp  TreadedApplication.h
src/parser/: CommandLineParser.cpp
src/replace/: InWordReplaceStrategy.cpp  InWordReplaceStrategy.h
src/sort/: IgnoreCaseSortStrategy.cpp  IgnoreCaseSortStrategy.h
test/: main.cpp
test/application/: DefaultApplicationTestCases.cpp
test/parser/: ParserTestCases.cpp
test/replace/: InWordReplaceStrategyTestCases.cpp
test/sort/: IgnoreCaseSortStrategy.cpp
